# frito

./: .gitignore  README.md  pyproject.toml
docs/: index.md
notebooks/: TestModelLoad.ipynb  TestingTrainingFiles.ipynb  demo_deconvolve_emnist.ipynb  demo_deconvolve_sim_disk.ipynb  full_vis.ipynb
notebooks/Testing/: DiscoTesting.ipynb  NUTStesting.ipynb  TestModelLoad.ipynb  TestSimulate.ipynb  pca.ipynb  test_latent_planets.ipynb
src/frito/: __init__.py  dorito_updates.py  jax_gaussian.py  plot.py  simulate.py  utils.py
src/frito/ autoencoder/: __init__.py  ae_utils.py  data.py  io_utils.py
src/frito/ autoencoder/model_structures/: __init__.py  model_0.py
src/frito/autoencoder/: __init__.py  ae_utils.py  data.py
src/frito/autoencoder/model_structures/: model_7_4.py  wider_model.py  widest_model.py
src/frito/model_structures/: model_0.py
