[project]
name = "frito"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jonah Goldfine", email = "jdg577@nyu.edu" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
frito = "frito:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
