[project]
name = "frito"
version = "0.0.1"
description = "An extension of amigo and dorito for regularized image deconvolution for resolved sources using machine-learned latent spaces"
readme = "README.md"
authors = [
    { name = "Jonah Goldfine", email = "jonah.goldfine@mq.edu.au" }
]
requires-python = ">=3.11"
dependencies = [
    "amigo",
    "astropy>=7.2.0",
    "dlux>=0.14.1",
    "dorito",
    "equinox>=0.13.6",
    "jax>=0.10.0",
    "jaxlib>=0.10.0",
    "kneed>=0.8.6",
    "matplotlib>=3.10.8",
    "photutils>=3.0.0",
    "pyehtplot",
    "scienceplots>=2.2.1",
    "scikit-learn>=1.8.0",
    "zodiax>=0.4.1",
]

classifiers=[
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]


[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
amigo = { git = "https://github.com/LouisDesdoigts/amigo.git" }
dorito = { git = "https://github.com/maxecharles/dorito.git" }
pyehtplot = { git = "https://github.com/liamedeiros/ehtplot.git" }
